# HeaterSoftware

./: .gitignore
AI_GEN/: README.md
AI_GEN/GUI/LVGL_demo/components/ui/: CMakeLists.txt  HeaterGUI.c  HeaterGUI_gen.c  HeaterGUI_gen.h  ui.h
AI_GEN/GUI/LVGL_demo/components/ui/components/channel/: channel.xml  channel_gen.c  channel_gen.h
AI_GEN/GUI/LVGL_demo/components/ui/components/column/: column.xml  column_gen.c  column_gen.h
AI_GEN/GUI/LVGL_demo/components/ui/components/control/: control.xml  control_gen.c  control_gen.h
AI_GEN/GUI/LVGL_demo/components/ui/components/icon/: icon_gen.c  icon_gen.h
AI_GEN/GUI/LVGL_demo/components/ui/components/info/: info.xml  info_gen.c  info_gen.h
AI_GEN/GUI/LVGL_demo/components/ui/components/page/: page.xml  page_gen.c  page_gen.h
AI_GEN/GUI/LVGL_demo/components/ui/components/row/: row_gen.c  row_gen.h
AI_GEN/GUI/LVGL_demo/components/ui/components/target_tmp/: target_tmp.xml  target_tmp_gen.c  target_tmp_gen.h
AI_GEN/GUI/LVGL_demo/components/ui/fonts/: BebasNeue_Regular_ttf_data.c
AI_GEN/GUI/LVGL_demo/components/ui/images/: channel_bg_data.c  img_down_data.c  img_up_data.c  info_bg_data.c  page_bg_data.c  start_bg_data.c  target_bg_data.c
AI_GEN/GUI/LVGL_demo/components/ui/screens/: demo_gen.c  demo_gen.h  home.xml  home_gen.c  home_gen.h
AI_GEN/GUI/LVGL_demo/main/: CMakeLists.txt  hello_world_main.c  idf_component.yml  lv_conf.h
AI_GEN/IO/: CMakeLists.txt
GUI/HeaterGUI/: HeaterGUI.h  HeaterGUI_gen.c  HeaterGUI_gen.h  file_list_gen.cmake  globals.xml  project.xml  ui.c
HW Test/V1/: CMakeLists.txt  sdkconfig  sdkconfig.old
HW Test/V2/: .gitignore  sdkconfig  sdkconfig.old
HW Test/V2/main/: CMakeLists.txt  main.c
HW Test/V2/main/00_display/: display.c  display.h
HW Test/V2/main/01_i2cdetect/: i2cdetect.c  i2cdetect.h
HW Test/V2/main/02_inputdetect/: inputdetect.c  inputdetect.h
HW Test/V2/main/03_wifidetect/: wifidetect.c
HW Test/V2/main/04_pdsetup/: AP33772S.h
HW Test/V2/main/05_temptest/: temptest.c
HW Test/V2/main/06_soundtest/: soundtest.c
HW Test/V2/main/07_backlighttest/: backlighttest.c
HW Test/V2/main/08_heatertest/: heatertest.c
HW Test/V2/main/09_fantest/: fantest.c
HW Test/V2/main/10_PID/: pid_test.c  pid_test.h
(+75 files in other folders)
