idf_component_register(
  SRCS
    "ui.c"
    "HeaterGUI.c"
    "HeaterGUI_gen.c"
    "screens/demo_gen.c"
    "screens/home_gen.c"
    "images/channel_bg_data.c"
    "images/page_bg_data.c"
    "images/start_bg_data.c"
    "images/target_bg_data.c"
    "fonts/LeagueGothic_ttf_data.c"
    "components/channel/channel_gen.c"
    "components/column/column_gen.c"
    "components/control/control_gen.c"
    "components/page/page_gen.c"
    "components/row/row_gen.c"
    "components/target_tmp/target_tmp_gen.c"
  INCLUDE_DIRS 
    "." 
    "screens" 
    "images" 
    "fonts"
    "components/channel/"
    "components/column/"
    "components/control/"
    "components/page/"
    "components/row/"
    "components/target_tmp/"
  REQUIRES lvgl
)